--- a/6-1.md
+++ b/6-1.md
@@ -88,8 +88,8 @@ AIの未来に関連して最も広まり、根強く残っている考え方の
 
 結局のところ、ターミネーターは映画を作るには格好のネタだが、パニックに陥るほどの現実的な問題とは言い難い。ターミネーターはギミックであり、多くの注目を集めるための簡単な方法であり、ジャーナリストがクリック率を上げるための広告塔であり、核兵器、民主主義の欠如、環境破壊、気候変動といった、退屈ではあるが現実の脅威から注意をそらすための赤信号なのである。実際、ターミネーターがもたらす本当の脅威は、実際の問題から注意をそらすことです。その問題の中には、AIが関係するものもあれば、関係しないものもたくさんあります。AIがもたらす問題については後述しますが、結論としては、「ターミネーターのことは忘れて、もっと重要なことに集中しよう」ということです。
 
-## Exercise 23: What is the perception of AI?
+## 設問23: AIはどのように捉えられているか？
 
-For this exercise, we want you to think about how AI is portrayed. Do an online image search for the term “AI” and see what kinds of pictures come up. If you are using Google search, you should choose "Images" in the top of the screen.
+今回の演習では、AIがどのように描かれているのかについて考えてみたいと思います。「人工知能」や「AI」とネットで画像検索して、どんな写真が出てくるか見てみましょう。Google検索の場合は、画面上部の「画像」を選んでください。
 
-What's the general impression you get about AI from the image search results? Is this an accurate representation of AI? Why or why not?
+画像検索の結果から、AIについて一般的にどのような印象を受けますか？これはAIを正確に表現しているのでしょうか？その理由、あるいはそうでない理由は何ですか？
