--- a/6-2.md
+++ b/6-2.md
@@ -98,10 +98,10 @@ AIの未来は予測できないので、この発展の速度と程度を予測
 
 また、以前の技術の進歩と同様に、AIがあるからこそ生まれる新しい仕事もあるでしょう。将来的には、研究開発や、創造性や人間と人間の相互作用が必要な業務に、労働力のより多くの割合が集中することになると思われます。このテーマについてもっと読みたい方は、例えばAbhinav Suriの「Artificial Intelligence and the Rise of Economic Inequality」という素晴らしいエッセイを参照してください。
 
-## Exercise 24: Implications of AI
+## 設問 24: AIの意味するところ
 
-What kind of articles (in newspapers and magazines or other popular science outlets such as blogs, ...) are being written about AI - and do you think they are realistic? Do an online search about AI related to one of your interests. Choose one of the articles and analyze it.
+新聞や雑誌、あるいはブログなどの一般的な科学媒体において、AIについてどのような記事が書かれているか調べ、それは現実的なものだと思うかどうか感想を述べてください。自分の興味に関連するAIについての記事をオンライン検索して探してみてください。その記事の中から一つを選び、分析して、下記についてレポートしてください。
 
-1. Mention the title of the article along with its author and where it was published (as a URL if applicable) in your answer.
-2. Explain the central idea in the article in your own words using about a paragraph of text (multiple sentences.)
-3. Based on your understanding, how accurate are the AI-related statements in the article? Explain your answer. Are the implications (if any) realistic? Explain why or why not.
+1. 記事のタイトル、著者名、URL
+2. 記事の中心的な考え方を、1段落程度の文章で自分の言葉で説明してください。
+3. あなたの理解では、この記事のAIに関する記述はどの程度正確ですか？その答えを説明してください。その意味するところは現実的ですか？その理由を説明してください。
