--- a/6-1.md
+++ b/6-1.md
@@ -3,90 +3,90 @@
 
 これを聞くとがっかりするかもしれませんが、私たちは将来世界がどうなるのか、AIが私たちの生活をどう変えていくのかを教えてくれるような水晶玉を持っているわけではありません。
 
-科学者として、私たちはしばしば予測を求められることがありますが、何も提供しないと断ると、目を丸くして（「退屈な学問だ」）言われます。しかし、実際には、AIの未来とそれが私たちの社会にもたらす影響について知っていると主張する人は、疑いの目で扱われるべきであると私たちは主張しています。
-
-![ハンモックに座った人を扇ぐロボット](./6_1-hammock.svg)
+科学者として私たちはしばしば予測を求められることがありますが、何も提供しないと断ると、目を丸くして「退屈な学問だ」と言われます。しかし、AIが私たちの社会にもたらす影響や未来について知っていると主張する人は、疑いの目で扱われるべきであると私たちは主張します。
 
 ## [現実歪曲空間](https://ja.wikipedia.org/wiki/%E7%8F%BE%E5%AE%9F%E6%AD%AA%E6%9B%B2%E7%A9%BA%E9%96%93)
+![ハンモックに座った人を扇ぐロボット](./6_1-hammock.svg)
 
-しかし、誰もが予測についてそれほど保守的というわけではありません。大きな見出しが売れる現代社会では、ニュースを280文字に分解しなければならず、控えめな（つまらない？）メッセージは失われ、シンプルで劇的なメッセージは拡大される。世間一般のAIに対する認識では、明らかにそうなっている。
+しかし、誰もが予測について我々のように保守的というわけではありません。大きな見出しが売れる現代社会では、ニュースを[280文字(Twitterの文字数)](https://www.bbc.com/japanese/41910622)に分解しなければならず、控えめでつまらないメッセージは失われ、シンプルで劇的なメッセージは拡大されます。世間一般のAIに対する認識は明らかにそうなっています。
 
 > **Note** ユートピア的なビジョンから厳しい予測まで
 >
-> メディア領域は極端なものに支配されている。AIセレブリティが、一つの大きなアイデアのために立ち、AIの未来について神託のような予測をするのを見かけるようになった。メディアは彼らの明確なメッセージを好む。指数関数的な成長を遂げ、どこからともなく1兆ドル規模の産業が生まれ、自分たちでは解決できないあらゆる問題を真のAIが解決し、人間がまったく働く必要のないユートピアの未来を約束する者もいる。
+> メディア領域は極端なものに支配されています。AIセレブが、一つの大きなアイデアにのっかって、AIの未来について神から託されたように予測をするのを見かけるようになりました。メディアは彼らの明確なメッセージを好んでいます。指数関数的な成長を遂げ、どこからともなく1兆ドル規模の産業が生まれ、自分たちでは解決できないあらゆる問題を真のAIが解決し、人間がまったく働く必要のないユートピアの未来を約束する者もいます。
 >
-> また、AIは世界征服への道であるとも主張されている。また、AIが人類の終わりを告げる（今から約20～30年後）、「AIの時代」には生活そのものが一変する、AIは我々の存在を脅かす存在であるなど、さらに異常な発言をする者もいる。
+> またAIは世界征服への道であるとも主張されています。また、AIは今から約20～30年後の人類の終わりを告げる、「AIの時代」には生活そのものが一変する、AIは我々の存在を脅かす存在であるなど、さらに異常な発言をする者もいます。
 
-少なくとも何かは当たるだろうが、予測がいかに難しいかを示すものとしてしか役に立たないだろうし、あまり意味のない予測も多い。私たちが目指すのは、これらの予測やその他の予測を見て、批判的に評価することができるようになることです。
+少なくとも何かは当たるでしょうが、予測がいかに難しいかを示すものとしてしか役に立たないでしょうし、あまり意味のない予測が多いです。私たちが目指すべきは、これらの予測やその他の予測を見て、批判的に評価することができるようになることです。
 
 ## ハリネズミとキツネについて
 
-政治学者のフィリップ・E・テトロックは、『スーパーフォアキャスティング』（原題：Superforecasting）の著者です。この本の著者である政治学者のフィリップ・E・テトロックは、人を、一つの大きなアイデアを持つ人（「ハリネズミ」）と、多くの小さなアイデアを持つ人（「キツネ」）に分類している。テトロックは、1984年から2003年にかけて実験を行い、どの予測が当たりそうで、どの予測が当たらないかを見分けるための要因を研究した。その結果、特に長期的な予測に関しては、ハリネズミよりもキツネの方が明らかに予測に長けている傾向があることが、重要な発見の一つであった。
+政治学者のフィリップ・E・テトロックは、[『超予測力』（原題：Superforecasting）](https://www.hayakawa-online.co.jp/shopdetail/000000013882/)の著者です。彼は、人を一つの大きなアイデアを持つ人（「ハリネズミ」と呼びます）と多くの小さなアイデアを持つ人（「キツネ」と呼びます）に分類しました。彼は、1984年から2003年にかけて実験を行い、どの予測が当たりそうでどの予測が当たらないかを見分けるための要因について研究を行いました。その結果、特に長期的な予測に関しては、ハリネズミよりもキツネの方が明らかに予測に長けていることが発見されたのです。
 
-おそらく、280文字で表現できるメッセージは、大きくてシンプルなハリネズミのアイデアの方が多いのでしょう。私たちのアドバイスは、慎重に正当化され、バランスの取れた情報源に注意を払い、一つの論法ですべてを説明し続ける人々には疑いを持つことです。
+おそらく280文字で表現できるメッセージは、大きくてシンプルなハリネズミのアイデアの方が多いのでしょう。私たちのアドバイスは、慎重に正当化されバランスの取れた情報源に注意を払い、一つの論法ですべてを説明する人々には疑いを持つ、ということです。
 
-未来を予測することは難しいですが、少なくとも過去と現在のAIを考察し、それを理解することで、未来がどのようなものになろうとも、より良い備えをすることができればと願っています。
+未来を予測することは難しいですが、少なくとも過去と現在のAIを考察しそれを理解することで、未来がどのようなものになろうともより良い備えをすることができればと願っています。
 
 ## AIの冬
 ![雪の中で眠るロボット](./6_2-robot.svg)
-AIの歴史は、他の多くの科学分野と同様、さまざまな異なるトレンドの到来と消滅を目撃してきました。科学哲学では、トレンドを表す言葉として「パラダイム」が用いられます。一般に、ある特定のパラダイムが研究者コミュニティの大部分に採用され、近い将来の進歩について楽観的な予測がなされる。例えば、1960年代には、ニューラルネットワークが、自然界、特に人間の脳の学習メカニズムを模倣して、すべてのAI問題を解決すると広く信じられていた。その次は、論理と人間がコード化したルールに基づくエキスパートシステムであり、1980年代に主流となったパラダイムであった。
+
+AIの歴史は、他の多くの科学分野と同様、さまざまな異なるトレンドの到来と消滅を目撃してきました。科学哲学では、トレンドを表す言葉として「パラダイム」という言葉が用いられます。一般に、ある特定のパラダイムが研究者コミュニティの大部分に採用され、近い将来の進歩について楽観的な予測がなされます。例えば、1960年代にはニューラルネットワークが、自然界、特に人間の脳の学習メカニズムを模倣して、すべてのAI問題を解決すると広く信じられていました。その次は、人間がコード化したルールと論理に基づくエキスパートシステムであり、1980年代に主流となったパラダイムがありました。
 
 ## ハイプサイクル
-各波の始まりには、初期の成功例がいくつもあり、誰もがハッピーで楽観的になる傾向がある。たとえそれが限定された領域で、ある意味で不完全なものであったとしても、その成功例は世間の注目を集めるようになる。多くの研究者は、増加する研究資金を得るために、AIに殺到し、少なくとも自分の研究をAIと呼ぶようになる。企業も、FOMO(Fear of Missout)を恐れて、AIへの取り組みを開始し、拡大している。
+各波の始まりには、初期の成功例がいくつもあり、誰もがハッピーで楽観的になる傾向があります。たとえそれが限定された領域で、ある意味で不完全なものであったとしても、その成功例は世間の注目を集めるようになります。多くの研究者は、増加する研究資金を得るためにAIに殺到し、少なくとも自分の研究をAIと呼ぶようになります。企業も、FOMO(フォーモ、取り残されることへの恐れ)のため、AIへの取り組みを開始し、拡張しています。
 
-これまで、AIに対する包括的な一般解が手の届くところにあると言われるたびに、その時は小さな障害だと思われていた、乗り越えられない問題にぶつかって進歩が終わってきた。1960年代のニューラルネットワークの場合、非線形性の処理と、ニューラルネットワークアーキテクチャに必要なパラメータ数の増加に伴う機械学習問題の解決に関連して、しゃっくりが出ていた。1980年代のエキスパートシステムの場合は、不確実性と常識の扱いに関する問題であった。何年にもわたる苦闘と満足のいかない約束の後、残された問題の本質が明らかになると、このパラダイムに対する悲観論が蓄積され、AI冬の時代がやってきた。この分野への関心は薄れ、研究努力は他の分野に向けられた。
+これまで、AIに対する包括的な一般解が手の届くところにあると言われるたびに、その時は小さな障害だと思われていたものの実際には乗り越えられない問題にぶつかって進歩が終わってきました。1960年代のニューラルネットワークでの障害は、非線形性の処理とニューラルネットワークアーキテクチャに必要なパラメータ数の増加に伴う機械学習の問題でした。1980年代のエキスパートシステムでの障害は、不確実性と常識の扱いに関する問題でした。何年にもわたる苦闘の後、残された問題の本質が明らかになると、このパラダイムに対する悲観論が蓄積され、AI冬の時代がやってきました。この分野への関心は薄れ、研究努力は他の分野に向けられたのです。
 
 ## 現代のAI
-現在、およそ2000年代に入ってから、AIは再び盛り上がりを見せている。現代のAIは、問題をより小さな、孤立した、明確に定義されたいくつかの問題に分割し、それらを一つずつ解決することに重点を置く傾向がある。現代のAIは、知性、心、意識の意味についての壮大な質問を回避し、現実世界の問題において実用的に役立つ解決策を構築することに焦点を当てているのです。これは、そのような解決策から利益を得ることができる私たち全員にとって、良いニュースです。
+2000年代に入ってから現在にむけてAIは再び盛り上がりを見せています。現代のAIは、問題をより小さな、孤立した、明確に定義されたいくつかの問題に分割し、それらを一つずつ解決することに重点を置く傾向があります。現代のAIは、知性、心、意識の意味についての壮大な質問を回避して、現実世界の問題において実用的に役立つ解決策を構築することに焦点を当てているのです。これは、そのような解決策から利益を得ることができる私たち全員にとって良いニュースと言えます。
 
-現代のAI手法のもう一つの特徴は、複雑で「厄介な」実世界での作業と密接に関連し、不確実性を処理する能力である。第3章では、AIにおける確率の利用を研究することで、この点を明らかにした。最後に、画像や実世界のデータをこれまで以上にうまく処理できるニューラルネットワークやディープラーニングの復活は、現在のAIの上昇傾向を大きく後押ししている。
+現代のAI手法のもう一つの特徴は、複雑で「厄介な」実世界での作業と密接に関連し、不確実性を処理する能力にあります。第3章では、AIにおける確率の利用を研究することで、この点を明らかにしました。最後に、画像や実世界のデータをこれまで以上にうまく処理できるニューラルネットワークやディープラーニングの復活は現在のAIの進化を大きく後押ししています。
 
 > **Note** 私たちはハイプサイクルの中にいるのでしょうか？
 >
->歴史が繰り返され、現在のブームの後に再びAIの冬が訪れるかどうかは、時間が経たなければ分からない問題である。たとえそうなって、より良い、より良いソリューションへの進歩が鈍化し、止まってしまうとしても、社会におけるAIの意義は留まることを知らない。現実の問題に役立つ解決策に焦点を当てたおかげで、現代のAI研究は、一般知能に関する大きな問題をまず解決しようとするのではなく、今日すでに実を結んでいる--初期の試みはそこで失敗していたのだが--のだ。
+>歴史が繰り返され、現在のブームの後に再びAIの冬が訪れるかどうかは、時間が経たなければ分からない問題です。たとえそうなって、より良いソリューションへの進歩が鈍化し止まってしまうとしても、社会におけるAIの意義は留まることを知りません。現実の問題に役立つ解決策に焦点を当てたおかげで、現代のAI研究は今日すでに実を結んでいます。
 
 ## 予測1：AIは今後も私たちの身近に存在し続ける
 
-思い起こせば、私たちはまず、私たちの生活すべてに影響を与える著名なAIアプリケーションを取り上げ、AI研究の動機付けを行いました。その例として、自動運転車、推薦システム、画像・映像処理の3つを取り上げました。この講座では、このほかにも、技術革新に貢献するさまざまなアプリケーションを取り上げました。
+思い起こせば、私たちはまず生活すべてに影響を与える著名なAIアプリケーションを取り上げ、AI研究の動機付けを行いました。その例として、自動運転車、レコメンド(推薦)システム、画像・映像処理の3つを取り上げました。この講座では、このほかにも、技術革新に貢献するさまざまなアプリケーションを取り上げました。
 
 > **Note**AIがもたらすもの
 >
->聴く音楽、ネットで買う商品、観る映画やドラマ、移動手段、そしてニュースや情報までもがAIの影響を受けているのです。さらに言えば、医学や宇宙物理学から中世史に至るまで、基本的にあらゆる科学の分野でも、宇宙や自分自身に対する理解を深めるために、AIの手法が取り入れられているのです。
+>聴く音楽、ネットで買う商品、観る映画やドラマ、移動手段、そしてニュースや情報までもがAIの影響を受けています。さらに言えば、医学や宇宙物理学から中世史に至るまで、基本的にあらゆる科学の分野で、宇宙や自分自身に対する理解を深めるためAIの手法が取り入れられています。
 
 ## 予言2：ターミネーターは来ない
 ![恐怖のロボット](./6_3-scaryrobot.svg)
 
-AIの未来に関連して最も広まり、根強く残っている考え方の1つがターミネーターである。金属の骨格とギラギラした目を持つ残忍な人型ロボット......というイメージを何となく持っているはずの人のために補足しておくと、そういうことなのだ。ターミネーター』は、ジェームズ・キャメロン監督による1984年の作品です。映画の中では、スカイネットと呼ばれるAIを搭載した地球規模の防衛システムがその存在を意識し、核兵器と高度な殺人ロボットで人類の大半を消し去るという内容です。
+AIの未来に関連して、最も広く根強く人々の印象に残る考え方の1つが「ターミネーター」です。金属の骨格とギラギラした目を持つ残忍な人型ロボット...というイメージ。「ターミネーター」はジェームズ・キャメロン監督による1984年の作品で、スカイネットと呼ばれるAIを搭載した地球規模の防衛システムがその存在を意識し、核兵器と高度な殺人ロボットで人類の大半を消し去るという内容です。
 
 > **Note** 2つの終末論
 >
->ターミネーターやそれに類する恐ろしいロボットの反乱の到来に至るシナリオには、2つの選択肢があるとされる。1つ目は、1984年に公開された映画「ターミネーター」のストーリーで、強力なAIシステムが意識を持ち、人類全般を本当に、本当に嫌いになったとするものである。
+>ターミネーターやそれに類する恐ろしいロボットの反乱の到来に至るシナリオには、2つの選択肢があるとされます。1つ目は、1984年に公開された映画「ターミネーター」のストーリーで、強力なAIシステムが意識を持ち、人類全般を本当に嫌いになる、とするものです。
 >
->2つ目のシナリオでは、ロボット軍団は、知的だが意識はないAIシステムによって制御され、原則的に人間のコントロール下に置かれる。このシステムは、例えば、ペーパークリップの生産を最適化するようにプログラムすることができる。一見何の変哲もないように聞こえるでしょう。
+>2つ目のシナリオでは、ロボット軍団は知的だが意識はなくAIシステムによって制御され、原則的に人間のコントロール下に置かれます。このシステムは、例えばペーパークリップの生産を最適化するようにプログラムすることができるので一見何の変哲もないシステムに聞こえるでしょう。
 >
->しかし、優れた知能を持つシステムであれば、エネルギーや原材料などの資源が許す範囲で、すぐにペーパークリップの生産量の限界に達してしまう。その結果、もっと多くの資源をペーパークリップの生産に振り向ける必要があるという結論に達するかもしれない。そのためには、たとえ人類文明にとって不可欠な資源であっても、他の用途に使われないようにする必要があるかもしれない。最も簡単な方法は、人間をすべて殺してしまうことです。そうすれば、システムの主な仕事であるペーパークリップの生産に、より多くの資源を使えるようになります。
+>しかし、優れた知能を持つシステムであれば、エネルギーや原材料などの資源が許す範囲で、すぐにペーパークリップの生産量の限界に達してしまいます。その結果、もっと多くの資源をペーパークリップの生産に振り向ける必要があるという結論に達するかもしれません。そのためには、たとえ人類文明にとって不可欠な資源であっても、他の用途に使われないようにする必要があるかもしれません。そのために最も簡単な方法は人間をすべて殺してしまうことになります。そうすれば、システムの主な仕事であるペーパークリップの生産により多くの資源を使えるようになります。
 
 ## なぜこれらのシナリオは非現実的なのか
 
-上記のシナリオがいずれも極めて非現実的であり、AIの未来について真剣に考えるよりもむしろSFの世界に属するものである理由はいくつもある。
+上記のシナリオがいずれも極めて非現実的であり、AIの未来について真剣に考えるよりもむしろSFの世界に属するものと言える理由はいくつもあります。
 
 ### 理由1．
 
-第一に、人間を凌駕する超知的で意識の高いAIが、AI手法の開発の意図しない結果として出現するという考え方は、素朴である。これまでの章で見てきたように、AIの手法は、人間や人間が開発したシステムによって提供される、完全に理解可能な原理と豊富な入力データの組み合わせに基づく自動推論にほかならないのである。最近傍分類器、線形回帰、AlphaGoゲームエンジン、あるいはディープニューラルネットワークが意識を持ち、超知的なAIマインドに進化し始めると想像するには、（非常に）活発な想像力が必要である。
+第一に、人間を凌駕する超知的で意識の高いAIが、AI手法の開発の意図しない結果として出現するという考え方は素朴すぎます。これまでの章で見てきたように、AIの手法は、人間や人間が開発したシステムによって提供される完全に理解可能な原理と豊富な入力データの組み合わせに基づく自動推論にほかなりません。最近傍分類器、線形回帰、AlphaGoゲームエンジン、あるいはディープニューラルネットワークが意識を持ち、超知的なAIマインドに進化し始めると想像するのはほぼ不可能です。
 
-なお、私たちは、人間レベルの知能を構築することが断固として不可能だと主張しているわけではありません。高度に知的な物理システムの可能性を証明するのは、鏡のように遠くを見るだけでいいのです。繰り返しになりますが、狭い範囲のAI手法を開発し、それを実世界の問題解決に適用しても、超知能は生まれません（第1章のAIの哲学の節で述べた狭い範囲のAIと一般のAIを思い出してください）。
+なお、私たちは人間レベルの知能を構築することが断固として不可能だと主張しているわけではありません。高度に知的な物理システムの可能性を証明するのは鏡のように遠くを見るだけでいいのです。繰り返しになりますが、狭い範囲のAI手法を開発しそれを実世界の問題解決に適用しても超知能は生まれません。
 
 ### 理由2．
 
-第二に、超知能AIを信じる人々が好んで用いる考え方に、いわゆるシンギュラリティ（特異点）というものがあります。このような超知能が実現すれば、人類は大きく取り残され、躊躇なく駆除できるアリのような存在になってしまう。指数関数的な知能の向上という考え方は非現実的だ。その理由は、たとえシステムがそれ自身の働きを最適化できたとしても、より困難な問題に直面し続け、その進歩が遅くなるからだ。人間の科学者が進歩するには、研究コミュニティ全体、さらには社会全体がこれまで以上の努力と資源を必要とするが、超知的な存在にはそれがないのと同じだ。人間社会は、たとえAI技術であっても、技術を何に使うかを決定する力を持っています。この力の多くは技術によって与えられ、AI技術が進歩するたびに、私たちはより強力になり、技術による潜在的なリスクをコントロールすることができるようになるのです。
+第二に、超知能AIを信じる人々が好んで用いる考え方に、いわゆるシンギュラリティ（特異点）というものがあります。このような超知能が実現すれば、人類は大きく取り残され躊躇なく駆除できるアリのような存在になってしまいます。しかし、指数関数的な知能の向上という考え方は非現実的です。その理由は、たとえシステムがそれ自身の働きを最適化できたとしても、より困難な問題に直面し続けるので、その進歩は遅くなるものだからです。人間の科学者が進歩するには、研究コミュニティ全体、さらには社会全体がこれまで以上の努力と資源を必要としますが、超知的な存在にはそれがありません。人間社会は、たとえAI技術であっても、技術を何に使うかを決定する力を持っています。この力の多くは技術によって与えられ、AI技術が進歩するたびに、私たちはより強力になり、技術による潜在的なリスクをコントロールすることができるようになるのです。
 
 > **Note** 価値観の一致問題
 >
->ペーパークリップの例は、価値観の一致問題として知られています。システムの目的を我々の価値観と一致するように特定することは、非常に難しいことです。しかし、その作業を邪魔しようとする人間を打ち負かすような超知的なシステムを作ったとする。そのようなシステムは、私たちが「ペーパークリップを作ってくれ」と言ったとき、本当は地球を惑星規模のペーパークリップ工場にするつもりはないことを理解する知能も持っていると考えるのが妥当だろう。
+>ペーパークリップの例は価値観の一致問題として知られています。システムの目的を我々の価値観と一致するようにすることは非常に難しいことです。しかし、その作業を邪魔しようとする人間を打ち負かすような超知的なシステムを作ったとします。そのようなシステムは、私たちが「ペーパークリップを作ってくれ」と言ったとき、本当は地球を惑星規模のペーパークリップ工場にするつもりはないことを理解する知能も持っていると考えるのが妥当でしょう。
 
 ## 物語と現実を切り離す
 
-結局のところ、ターミネーターは映画を作るには格好のネタだが、パニックに陥るほどの現実的な問題とは言い難い。ターミネーターはギミックであり、多くの注目を集めるための簡単な方法であり、ジャーナリストがクリック率を上げるための広告塔であり、核兵器、民主主義の欠如、環境破壊、気候変動といった、退屈ではあるが現実の脅威から注意をそらすための赤信号なのである。実際、ターミネーターがもたらす本当の脅威は、実際の問題から注意をそらすことです。その問題の中には、AIが関係するものもあれば、関係しないものもたくさんあります。AIがもたらす問題については後述しますが、結論としては、「ターミネーターのことは忘れて、もっと重要なことに集中しよう」ということです。
+結局のところ、ターミネーターは映画を作るには格好のネタだが、パニックに陥るほどの現実的な問題とは言い難いです。ターミネーターはギミックであり、多くの注目を集めるための簡単な方法であり、ジャーナリストがクリック率を上げるための広告塔であり、核兵器、民主主義の欠如、環境破壊、気候変動といった、退屈ではあるが現実の脅威から注意をそらすための赤信号なのです。実際、ターミネーターがもたらす本当の脅威は、実際の問題から注意をそらすことです。その問題の中には、AIが関係するものもあれば、関係しないものもたくさんあります。AIがもたらす問題については後述しますが、結論としては「ターミネーターのことは忘れてもっと重要なことに集中しよう」ということです。
 
 ## 設問23: AIはどのように捉えられているか？
 
