--- a/6-3.md
+++ b/6-3.md
@@ -4,18 +4,17 @@ AIがもたらす変化に私たちの社会がどれだけ適応できるかを
 AIについて学んだことはすべて、未来が明るいことを示唆しています。私たちは新しく優れたサービスを手に入れ、生産性の向上により全体として良い結果をもたらすでしょう。ただし、社会的な影響を慎重に検討し、AIの力が公共の利益のために使われることを保証することが条件となります。
 
 ## ポジティブな結果を得るために必要なこと
-
 それでも私たちはやるべきことをたくさん抱えています。
 
-- 差別を増やすのではなく、減らすことができるように、アルゴリズムのバイアスを避ける必要があります。
-- また、見ることと信じることはもはや同じではないので、見たものに対して批判的になることを学ぶ必要があります。そして、より本物に見える虚偽を簡単に捏造するのではなく、不正を発見するのに役立つAI手法を開発する必要があります。
+- 差別を増やすのではなく減らすことができるように、アルゴリズムのバイアスを避ける必要があります。
+- 見ることと信じることはもはや同じではないので、見たものに対して批判的になることを学ぶ必要があります。そして、より本物に見える虚偽を簡単に捏造するのではなく、不正を発見するのに役立つAI手法を開発する必要があります。
 - また、プライバシーを守る権利と、それを侵害した場合の罰則を規定する必要があります。
 
 また、AIエリート、つまり最新のAI技術を手に入れ、それを使って前例のない経済的不平等にアクセスできる人たちを生み出すのではなく、すべての人に利益を分け与える新しい方法を見出す必要があるのです。そのためには、慎重な政治的判断が必要です（政治的判断というのは、政策に関する決定を意味し、選挙で誰が誰に投票するか、個々の政治家や政党の出入りとはあまり関係がないことに注意してください）。
 
 > **Note** 政策の重要性
 >
-> 仕事の進化やAIがもたらす変化に社会がどれだけ適応できるかを決める最も重要な判断は、技術的なものではありません。政治的なものである。
+> 仕事の進化やAIがもたらす変化に社会がどれだけ適応できるかを決める最も重要な判断は、技術的なものではありません。政治的なものです。
 >
 >AI活用の規制は民主主義の原則に従わなければならず、将来どのような社会にしたいのか、誰もが平等に発言できるようにしなければいけません。これを可能にする唯一の方法は、技術に関する知識を誰もが自由に利用できるようにすることです。もちろん、どんな話題でも、それについて他の人よりも詳しい専門家は常に存在します。しかし、少なくとも私たちは、彼らの言っていることを批判的に評価する能力を持つべきです。
 
@@ -23,7 +22,7 @@ AIについて学んだことはすべて、未来が明るいことを示唆し
 
 ## 個人としての私たちの役割
 
-思い起こせば、このコースは、私たちの生活すべてに影響を与える著名なAIアプリケーションを議論することで、AIを学ぶ動機付けをすることから始まりました。自動運転車、推薦システム、画像・映像処理という3つの例を取り上げました。このコースでは、この他にも、現在の技術の変遷に貢献する様々なアプリケーションについて議論してきました。
+思い起こせば、このコースは、私たちの生活すべてに影響を与える著名なAIアプリケーションを議論することで、AIを学ぶ動機付けをすることから始まりました。自動運転車、レコメンデーション(推薦)システム、画像・映像処理という3つの例を取り上げました。このコースでは、この他にも、現在の技術の変遷に貢献する様々なアプリケーションについて議論してきました。
 
 > **Note** 隠された意図
 >
